* 2007-11-13 - dennis.sieben@open-xchange.com

  - Bugfix ID#10180 RuntimeExceptions aren't logged
  
* 2007-11-12 - choeger@open-xchange.com

  - Bugfix ID#9835 [L3] hanging or long taking command line tools
  
* 2007-11-08 - dennis.sieben@open-xchange.com

  - Bugfix ID#10125 No rollback if filestore creation fails during createuser
  
* 2007-11-07 - manuel.kraft@open-xchange.com

  - Bugfix ID#10050 Database leftovers of deleted contexts

* 2007-11-06 - dennis.sieben@open-xchange.com

  - Bugfix ID#10072 L3: display name of contact blocks creation of new user
  
* 2007-10-31 - manuel.kraft@open-xchange.com

   - Bugfix ID#10005 [HEAD] Connections to database not returned in admindaemon

* 2007-10-29 - dennis.sieben@open-xchange.com

  - Bugfix ID#9983 Changing user by name isn't running any more

* 2007-10-23 - dennis.sieben@open-xchange.com

  - Bugfix ID#9620 RMI Api documentation lacks proper language handling description

* 2007-10-23 - manuel.kraft@open-xchange.com

   - Bugfix ID#9938 [HEAD] cache does not get invalidated when users are added to or removed from groups

* 2007-10-18 - manuel.kraft@open-xchange.com

   - Bugfix ID#9860 Unable to delete Contact: Context 30 Contact 2 on delete context

* 2007-10-15 - manuel.kraft@open-xchange.com
 
  - Bugfix ID#9806 [HEAD] username can't be changed
  - Bugfix ID#9805 [HEAD] No error message when username is going to be changed

* 2007-10-12 - dennis.sieben@open-xchange.com
 
  - Bugfix ID#9786 L3: IMAP port is stripped from commandline
 
* 2007-10-11 - dennis.sieben@open-xchange.com
 
  - Bugfix ID#9777 no adequate description of parameters
 
* 2007-10-10 - choeger@open-xchange.com

 - Bugfix ID#9767 [L3] changing admin password with disabled authentication does not work

* 2007-10-08 - manuel.kraft@open-xchange.com

 - Bugfix ID#9616 Deleted users are not removed from Global Addressbook in Outlook

* 2007-09-26 - choeger@open-xchange.com

  - Bugfix ID#9582 osgi/config.ini does not exist on upgrading the